--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,5 +7,26 @@ user.create.errors.username_is_invalid=Der Username sollte zwischen {min} und {m
 user.create.errors.email_is_empty=Die E-Mail muss angegeben werden
 user.create.errors.email_is_invalid=Die E-Mail sollte eine gültige E-Mail sein
 user.create.errors.password_is_empty=Das Passwort muss angegeben werden
-user.create.errors.password_is_invalid=Das Passwort sollte mindestens 8 Zeichen lang sein und mindestens einen großen und einen kleinen Buchstaben sowie eine Zahl enthalten
+user.create.errors.password_is_invalid=Das Passwort sollte mindestens 8 Zeichen lang sein und mindestens einen großen \
+                                       und einen kleinen Buchstaben sowie eine Zahl enthalten
+
+user.update.errors.first_name_is_empty=Der Vorname muss angegeben werden
+user.update.errors.first_name_is_invalid=Der Vorname sollte zwischen {min} und {max} Zeichen lang sein
+user.update.errors.last_name_is_empty=Der Nachname muss angegeben werden
+user.update.errors.last_name_is_invalid=Der Nachname sollte zwischen {min} und {max} Zeichen lang sein
+user.update.errors.username_is_empty=Der Username muss angegeben werden
+user.update.errors.username_is_invalid=Der Username sollte zwischen {min} und {max} Zeichen lang sein
+user.update.errors.email_is_empty=Die E-Mail muss angegeben werden
+user.update.errors.email_is_invalid=Die E-Mail sollte eine gültige E-Mail sein
+user.update.errors.password_is_invalid=Um das alte Passwort beizubehalten, lassen Sie dieses Feld leer, um es zu ändern, \
+                                       sollte das Passwort mindestens 8 Zeichen lang sein und mindestens einen großen \
+                                       und einen kleinen Buchstaben sowie eine Zahl enthalten
+
+auth.login.info.login_is_successful=Auth ist erfolgreich
+auth.current.errors.user_not_authenticated=Nicht authentifiziert
+auth.current.errors.user_not_found=Benutzer nicht gefunden
+auth.logout.info.logout_is_successful=Logout ist erfolgreich
+
+security.auth.errors.user_not_authenticated=Nicht authentifiziert
+security.auth.errors.access_denied=Zugriff verweigert
 
