User added and SecurityConfig initialized

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,10 +22,27 @@ user.update.errors.password_is_invalid=Um das alte Passwort beizubehalten, lasse
                                        sollte das Passwort mindestens 8 Zeichen lang sein und mindestens einen großen \
                                        und einen kleinen Buchstaben sowie eine Zahl enthalten
 
+user.forgot_password.errors.email_is_empty=Die E-Mail muss angegeben werden
+user.forgot_password.errors.email_is_invalid=Die E-Mail sollte eine gültige E-Mail sein
+
+user.reset_password.errors.token_is_empty=Token darf nicht leer sein
+user.reset_password.errors.password_is_empty=Das Passwort muss angegeben werden
+user.reset_password.errors.password_is_invalid=Das Passwort sollte mindestens 8 Zeichen lang sein und mindestens einen großen \
+                                       und einen kleinen Buchstaben sowie eine Zahl enthalten
+
 auth.login.info.login_is_successful=Auth ist erfolgreich
 auth.current.errors.user_not_authenticated=Nicht authentifiziert
 auth.current.errors.user_not_found=Benutzer nicht gefunden
 auth.logout.info.logout_is_successful=Logout ist erfolgreich
+auth.verify.info.verification_successful=E-Mail wurde erfolgreich bestätigt
+auth.verify.errors.invalid_token=Ungültiger oder abgelaufener Bestätigungslink
+auth.forgot.info.email_sent=Eine E-Mail mit Anweisungen zum Zurücksetzen Ihres Passworts wurde gesendet
+auth.forgot.errors.too_many_attempts=Zu viele Anfragen zum Zurücksetzen des Passworts. Bitte versuchen Sie es später erneut
+auth.reset.info.password_reset_successful=Passwort wurde erfolgreich zurückgesetzt
+auth.reset.errors.invalid_token=Ungültiger oder abgelaufener Token zum Zurücksetzen des Passworts
+auth.resend_verification_token.info.email_sent=Eine E-Mail mit Anweisungen zur Kontobestätigung wurde gesendet
+auth.resend_verification_token.errors.too_many_attempts_or_token_expired=Zu viele Anfragen zur Sendung der Kontobestätigung. \
+                                                                         Oder verification Token ist abgelaufen.
 
 security.auth.errors.user_not_authenticated=Nicht authentifiziert
 security.auth.errors.access_denied=Zugriff verweigert
