Letzte Änderungen (09.05.2025 11:14) Ich habe für Projekts teil aktualisiert. Beziehungsweise ProjectService, ProjectRestController, Project, ProjektRepository usw.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,6 +54,9 @@ project.getAll.empty=Es gibt derzeit keine Projekte.
 project.getById.success=Projekt mit ID {0} erfolgreich hochgeladen.
 project.delete.success=Projekt mit ID {0} wurde erfolgreich gelöscht.
 project.not.found=Projekt mit ID {0} wurde nicht gefunden.
+project.invite.success=Benutzer mit ID={1} wird zum Projekt mit ID={0} hinzugefügt.
+project.access.denied=Zugriff verweigert.
+
 
 curriculum.creation.success=Das neue Curriculum ist erfolgreich eingeführt worden.
 curriculum.update.success=Das neue Curriculum ist erfolgreich aktualisiert worden.
